fixed whitespace

--- a/src/layout/global.scss
+++ b/src/layout/global.scss
@@ -2,5 +2,6 @@ div .mobile-fix {
   @media (max-width: 360px - 1px) {
     padding-left: 0;
     padding-right: 0;
+    min-height: 100vh;
   }
 }
