--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -9,12 +9,11 @@ html {
 }
 
 html {
-  max-height: 100%;
+  min-height: 100vh;
 }
 
 body {
   margin: 0;
-  min-height: 100vh;
 }
 
 .md-background--secondary {
